# narorumo-backup

./: README.md  narorumo.ss
bidynodes/: bidynodes.js
cmdlineweb/: README  agenda.py
constraintpuzzles/: sendmore.py
deniable/: INCRIMINATING  Makefile  README  decrypt.py  permute.py  scalarproduct.py  trapdoor.py
douglas/: README  alignment.py
emailcorpus/: emailcorpus.py
fitocracy/: README  app.yaml  fitocracy.py
goto/: README  README.md  goto.py  goto.sh
icfp08/: team
icfp09/: README  calculate-deltav.py  decompile-obf.py  hohmann.1001.R  hohmann.1002.R  hohmann.1004.R  meetandgreet.2001.R  meetandgreet.2002.R  meetandgreet.2003.R  meetandgreet.2004.R  meetandgreet.scm
icfp11/: README  alexr-notes.txt  lkuper-notes.txt  makesubmission  notes.txt  run
minikanren-stuff/: generate-tautologies.scm  matche.sls  zip-unzip.scm
mod_remixable/: README  README-CORPUS  justremixable.py  makeremixable.sh
narorumo/: narorumo.scm  narorumo.ss
paperaday/: paperaday.py
papershortener/: app.yaml  frontend.py  papershortener.py
passive/: passive.py  postagger.py
perturbation/: lindsey_perturbation.py  perturbation.scm
plats/: metatag.py  plats.py  set_metatag.js  variable.py  welcome.html  welcome.py
projecteuler/: 1.scm  2.py  4.py  6.py
redexercises/: chapter-12.rkt
rwh/: chapter3.hs  chapter4.hs
satsolver/: solveitup.py  solver.template  solvergenerator.py
scrabblebot/: Board.py  Makefile  TestBoard.py
sicp/: 1.19.scm  (+4 more)
trunk/wogo/: Makefile  TODO  Wogo.hs  WogoParser.hs  parser.hs  wogo.cabal
trunk/wogo/logo-examples/: ack.logo
(+620 files in other folders)
