Name:                wogo
Version:             0.0
Synopsis:            Super cool mega lambdas
Description:         My super cool, indeed, even mega lambdas 
                     will demonstrate a basic project. You will marvel.
License:             GPL
License-file:        LICENSE
Author:              Alex Rudnick
Maintainer:          Alex Rudnick <alex.rudnick@gmail.com>
Build-Depends:       base

Executable:          wogo
Main-is:             Wogo.hs
